Source/WebKit/chromium/src/AutofillPopupMenuClient.cpp
@@ -289,19 +289,19 @@ void AutofillPopupMenuClient::initialize(
     // The direction of text in popup menu is set the same as the direction of
     // the input element: textField.
     m_regularStyle = adoptPtr(new PopupMenuStyle(Color::black, Color::white, regularFont, true, false,
-                                                 Length(WebCore::Fixed), textField->renderer()->style()->direction(),
-                                                 textField->renderer()->style()->unicodeBidi() == Override,
-                                                 PopupMenuStyle::AutofillPopup));
+        Length(WebCore::Fixed), textField->renderer()->style()->direction(),
+        textField->renderer()->style()->unicodeBidi() == Override,
+        PopupMenuStyle::CustomBackgroundColor, PopupMenuStyle::AutofillPopup));
 
     FontDescription warningFontDescription = regularFont.fontDescription();
     warningFontDescription.setItalic(true);
     Font warningFont(warningFontDescription, regularFont.letterSpacing(), regularFont.wordSpacing());
     warningFont.update(regularFont.fontSelector());
     m_warningStyle = adoptPtr(new PopupMenuStyle(Color::darkGray, m_regularStyle->backgroundColor(), warningFont,
-                                                 m_regularStyle->isVisible(), m_regularStyle->isDisplayNone(),
-                                                 m_regularStyle->textIndent(), m_regularStyle->textDirection(),
-                                                 m_regularStyle->hasTextDirectionOverride(),
-                                                 PopupMenuStyle::AutofillPopup));
+        m_regularStyle->isVisible(), m_regularStyle->isDisplayNone(),
+        m_regularStyle->textIndent(), m_regularStyle->textDirection(),
+        m_regularStyle->hasTextDirectionOverride(),
+        PopupMenuStyle::CustomBackgroundColor, PopupMenuStyle::AutofillPopup));
 }
 
 void AutofillPopupMenuClient::setSuggestions(const WebVector<WebString>& names,
